# ddialog

./: .cursorrules  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.dev  alembic.ini  entrypoint.sh  package.json  pyproject.toml
backend/src/: app.ts  database.py  main.py  models.py  schemas.py
backend/src/__tests__/: app.test.ts
backend/src/alembic/: env.py
backend/src/routers/: auth.py  chat.py  documents.py  users.py  workspaces.py
backend/src/routes/: chat.py
backend/src/services/: __init__.py  auth.py  document_processor.py  llm_service.py
document-processor/: package.json
document-processor/src/: app.ts
frontend/: Dockerfile  Dockerfile.dev  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/app/: App.tsx  main.tsx
frontend/src/components/: Chat.tsx  ChatInput.tsx  Layout.tsx  Logo.tsx  PrivateRoute.tsx  Workspace.tsx  WorkspaceList.tsx  mode-toggle.tsx
frontend/src/components/Chat/: ChatTypes.tsx  ChatWindow.tsx
frontend/src/components/Home/: Home.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useDocuments.ts  useTheme.ts  useThreads.ts  useWorkspace.ts  useWorkspaces.ts
frontend/src/layouts/: ErrorBoundary.tsx  Footer.tsx  Header.tsx  LoadingSpinner.tsx  MainLayout.tsx  Sidebar.tsx
frontend/src/pages/: Home.tsx  Login.tsx  Register.tsx  Workspace.tsx
frontend/src/services/: api.ts
(+64 files in other folders)
